contenedor de informacion principal

--- a/VDR Html/VDR.html
+++ b/VDR Html/VDR.html
@@ -49,15 +49,41 @@
 
 
 
-  <button id="toggle-button">Mostrar Menú</button>
-  <nav id="menu" class="hidden">
-    <ul>
-      <li><a href="#">Opción 1</a></li>
-      <li><a href="#">Opción 2</a></li>
-      <li><a href="#">Opción 3</a></li>
-    </ul>
-  </nav>
-  
+  <section class="con-info">
+
+    <button id="toggle-button">Mostrar Menú</button>
+    <div id="menu" class="hidden">
+      <ul>
+        <li><a href="#">Opción 1</a></li>
+        <li><a href="#">Opción 2</a></li>
+        <li><a href="#">Opción 3</a></li>
+      </ul>
+    </div>
+
+    <button id="toggle-button">Mostrar Menú</button>
+    <div id="menu" class="hidden">
+      <ul>
+        <li><a href="#">Opción 1</a></li>
+        <li><a href="#">Opción 2</a></li>
+        <li><a href="#">Opción 3</a></li>
+      </ul>
+    </div>
+
+    <button id="toggle-button">Mostrar Menú</button>
+    <div id="menu" class="hidden">
+      <ul>
+        <li><a href="#">Opción 1</a></li>
+        <li><a href="#">Opción 2</a></li>
+        <li><a href="#">Opción 3</a></li>
+      </ul>
+    </div>
+  </section>
+
+
+
+
+
+
 
 
 
@@ -67,9 +93,5 @@
     crossorigin="anonymous"></script>
   <script src="/VDR/VDR Html/VDR.js"></script>
 </body>
-
-
-
-
 
 </html>
