--- a/VDR Html/VDR.html
+++ b/VDR Html/VDR.html
@@ -48,42 +48,42 @@
   </div>
 
 
+  <!-- Contenedor de informacion principal -->
+  <section class="todo">
+    <div class="con-info">
+      <button id="toggle-button">Mostrar Menú</button>
+      <div id="menu" class="hidden">
+        <ul>
+          <li><a href="#">Opción 1</a></li>
+          <li><a href="#">Opción 2</a></li>
+          <li><a href="#">Opción 3</a></li>
+        </ul>
+      </div>
 
-  <section class="con-info">
+      <button id="toggle-button">Mostrar Menú</button>
+      <div id="menu" class="hidden">
+        <ul>
+          <li><a href="#">Opción 1</a></li>
+          <li><a href="#">Opción 2</a></li>
+          <li><a href="#">Opción 3</a></li>
+        </ul>
+      </div>
 
-    <button id="toggle-button">Mostrar Menú</button>
-    <div id="menu" class="hidden">
-      <ul>
-        <li><a href="#">Opción 1</a></li>
-        <li><a href="#">Opción 2</a></li>
-        <li><a href="#">Opción 3</a></li>
-      </ul>
-    </div>
-
-    <button id="toggle-button">Mostrar Menú</button>
-    <div id="menu" class="hidden">
-      <ul>
-        <li><a href="#">Opción 1</a></li>
-        <li><a href="#">Opción 2</a></li>
-        <li><a href="#">Opción 3</a></li>
-      </ul>
-    </div>
-
-    <button id="toggle-button">Mostrar Menú</button>
-    <div id="menu" class="hidden">
-      <ul>
-        <li><a href="#">Opción 1</a></li>
-        <li><a href="#">Opción 2</a></li>
-        <li><a href="#">Opción 3</a></li>
-      </ul>
+      <button id="toggle-button">Mostrar Menú</button>
+      <div id="menu" class="hidden">
+        <ul>
+          <li><a href="#">Opción 1</a></li>
+          <li><a href="#">Opción 2</a></li>
+          <li><a href="#">Opción 3</a></li>
+        </ul>
+      </div>
     </div>
   </section>
 
 
-
-
-
-
+  <div id="contenido">
+    
+</div>
 
 
 
