--- a/VDR Html/VDR.html
+++ b/VDR Html/VDR.html
@@ -44,54 +44,44 @@
   <!-- Titulo -->
   <h1 class="titulo">VDR</h1>
 
-  <div class="recursos">
-  </div>
-
-
   <!-- Contenedor de informacion principal -->
   <section class="todo">
+    <!-- Ram -->
     <div class="con-info">
-      <button id="toggle-button">Mostrar Menú</button>
-      <div id="menu" class="hidden">
-        <ul>
-          <li><a href="#">Opción 1</a></li>
-          <li><a href="#">Opción 2</a></li>
-          <li><a href="#">Opción 3</a></li>
-        </ul>
-      </div>
+      <button class="boton" onclick="mostrarListaRam()">Mostrar RAM</button>
+      <ul class="lista" id="miListaRam">
+      </ul>
+    </div>
+    
+    <!-- Procesador -->
+    <div class="con-info">
+      <button class="boton" onclick="mostrarListaProcesador()">Mostrar Procesador</button>
+      <ul class="lista" id="miListaProcesador">
+      </ul>
+    </div>
 
-      <button id="toggle-button">Mostrar Menú</button>
-      <div id="menu" class="hidden">
-        <ul>
-          <li><a href="#">Opción 1</a></li>
-          <li><a href="#">Opción 2</a></li>
-          <li><a href="#">Opción 3</a></li>
-        </ul>
-      </div>
-
-      <button id="toggle-button">Mostrar Menú</button>
-      <div id="menu" class="hidden">
-        <ul>
-          <li><a href="#">Opción 1</a></li>
-          <li><a href="#">Opción 2</a></li>
-          <li><a href="#">Opción 3</a></li>
-        </ul>
-      </div>
+    <!-- Disco duro -->
+    <div class="con-info">
+      <button class="boton" onclick="mostrarListaDiscoDuro()">Mostrar Disco duro</button>
+      <ul class="lista" id="miListaDiscoDuro">
+      </ul>
     </div>
   </section>
 
 
-  <div id="contenido">
-    
-</div>
 
 
 
+  
+  <footer class="pie">
+    hola
+  </footer>
 
+
+  <script src="/VDR Html/VDR.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
-  <script src="/VDR/VDR Html/VDR.js"></script>
 </body>
 
 </html>
